--- a/manifests/api-deployment.yaml
+++ b/manifests/api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api
-  namespace: cloudchamp
+  namespace: awashm1
   labels:
     role: api
     env: demo
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: cloudacademydevops/api:v3
+        image: awashmtest/api:v3
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
